--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="#page-top">Start Bootstrap</a>
+                <a class="navbar-brand" href="#page-top">VOLUMENATIC</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -51,13 +51,13 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#portfolio">Portfolio</a>
+                        <a href="#portfolio">Trabajos</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#about">About</a>
+                        <a href="#about">Sobre nosotros</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#contact">Contact</a>
+                        <a href="#contact">Contacto</a>
                     </li>
                 </ul>
             </div>
@@ -75,7 +75,7 @@
                     <div class="intro-text">
                         <span class="name">Volumenatic</span>
                         <hr class="star-light">
-                        <span class="skills">Rocódromos personalizados - Estudio personalizado - Tu sueño, el nuestro</span>
+                        <span class="skills">Rocódromos personalizados - Estudio y presupuesto gratuitos - Tu sueño, el nuestro</span>
                     </div>
                 </div>
             </div>
